kubernetes/data-index-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: data-index
  name: data-index
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data-index
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: data-index
    spec:
      containers:
        - env:
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka:29092
            - name: KOGITO_DATA_INDEX_PROPS
              value: -Dquarkus.hibernate-orm.database.generation=update
            - name: QUARKUS_DATASOURCE_JDBC_URL
              value: jdbc:postgresql://postgres:5432/kogito
            - name: QUARKUS_DATASOURCE_PASSWORD
              value: kogito-pass
            - name: QUARKUS_DATASOURCE_USERNAME
              value: kogito-user
          image: quay.io/kiegroup/kogito-data-index-postgresql:1.33
          name: data-index
          ports:
            - containerPort: 8080
          
          volumeMounts:
            - mountPath: /home/kogito/data/protobufs
              name: data-index-claim0
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      
      volumes:
        - name: data-index-claim0
          persistentVolumeClaim:
            claimName: data-index-claim0
status: {}
