kubernetes/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: kafka
    spec:
      containers:
        - args:
            - sh
            - -c
            - bin/kafka-server-start.sh config/server.properties --override inter.broker.listener.name=$()$(){KAFKA_INTER_BROKER_LISTENER_NAME} --override listener.security.protocol.map=$()$(){KAFKA_LISTENER_SECURITY_PROTOCOL_MAP} --override listeners=$()$(){KAFKA_LISTENERS} --override advertised.listeners=$()$(){KAFKA_ADVERTISED_LISTENERS} --override zookeeper.connect=$()$(){KAFKA_ZOOKEEPER_CONNECT}
          image: strimzi/kafka:0.20.1-kafka-2.6.0
          name: kafka
          ports:
            - containerPort: 9092
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
          
      
status: {}
