kubernetes/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: keycloak
    spec:
      containers:
        - env:
            - name: DB_ADDR
              value: postgres
            - name: DB_DATABASE
              value: kogito
            - name: DB_PASSWORD
              value: kogito-pass
            - name: DB_SCHEMA
              value: public
            - name: DB_USER
              value: kogito-user
            - name: DB_VENDOR
              value: POSTGRES
            - name: KEYCLOAK_IMPORT
              value: /tmp/kogito-realm.json
            - name: KEYCLOAK_PASSWORD
              value: admin
            - name: KEYCLOAK_USER
              value: admin
          image: quay.io/keycloak/keycloak:19.0.3-legacy
          livenessProbe:
            exec:
              command:
                - curl
                - -f
                - http://localhost:8080/auth/realms/kogito
            failureThreshold: 50
            periodSeconds: 1
            timeoutSeconds: 1
          name: keycloak
          ports:
            - containerPort: 8080
         
          volumeMounts:
            - mountPath: /tmp/kogito-realm.json
              name: keycloak-claim0
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: keycloak-claim0
          persistentVolumeClaim:
            claimName: keycloak-claim0
status: {}
