kubernetes/pgadmin-compose-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin-compose
  name: pgadmin-compose
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: pgadmin-compose
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: pgadmin-compose
    spec:
      containers:
        - env:
            - name: PGADMIN_DEFAULT_EMAIL
              value: user@user.org
            - name: PGADMIN_DEFAULT_PASSWORD
              value: pass
          image: dpage/pgadmin4:5.0
          name: pgadmin-container
          ports:
            - containerPort: 80
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      
status: {}
