kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: postgres
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:13.4-alpine3.14
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -q
                - -d
                - kogito
                - -U
                - kogito-user
            failureThreshold: 50
            periodSeconds: 10
            timeoutSeconds: 45
          name: postgres
          ports:
            - containerPort: 5432
          
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: c
            - mountPath: /docker-entrypoint-initdb.d
              name: postgres-claim1
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      
      restartPolicy: Always
      volumes:
        - name: c
          persistentVolumeClaim:
            claimName: c
        - name: postgres-claim1
          persistentVolumeClaim:
            claimName: postgres-claim1
status: {}
