kubernetes/task-console-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: task-console
  name: task-console
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: task-console
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: task-console
    spec:
      containers:
        - env:
            - name: KOGITO_DATAINDEX_HTTP_URL
              value: http://host.docker.internal:8180/graphql
            - name: KOGITO_TASK_CONSOLE_PROPS
              value: -Dkogito.consoles.keycloak.config.url=http://host.docker.internal:8480/auth -Dkogito.consoles.keycloak.config.health-check-url=http://host.docker.internal:8480/auth/realms/kogito/.well-known/openid-configuration
          image: quay.io/kiegroup/kogito-task-console:1.33
          name: task-console
          ports:
            - containerPort: 8080
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      
status: {}
