kubernetes/zookeeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zookeeper
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/test-default: "true"
        io.kompose.service: zookeeper
    spec:
      containers:
        - args:
            - sh
            - -c
            - bin/zookeeper-server-start.sh config/zookeeper.properties
          image: strimzi/kafka:0.20.1-kafka-2.6.0
          name: zookeeper
          ports:
            - containerPort: 2181
          resources:
           limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
           requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          securityContext:
           capabilities:
            drop:
            - NET_RAW
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      
status: {}
