kubernetes/data-index-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: data-index
  name: data-index
spec:
  ports:
    - name: "8180"
      port: 8180
      targetPort: 8080
  selector:
    io.kompose.service: data-index
type: LoadBalancer
