kubernetes/pgadmin-compose-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: pgadmin-compose
  name: pgadmin-compose
spec:
  ports:
    - name: "8055"
      port: 8055
      targetPort: 80
  selector:
    io.kompose.service: pgadmin-compose
type: LoadBalancer
