kubernetes/task-console-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: task-console
  name: task-console
spec:
  ports:
    - name: "8380"
      port: 8380
      targetPort: 8080
  selector:
    io.kompose.service: task-console
type: LoadBalancer
